--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
     "ini": "^1.3.4"
   },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "blanket": "^1.1.7",
+    "coveralls": "^2.11.2",
+    "mocha": "^2.2.5",
+    "mocha-lcov-reporter": "0.0.2"
+  },
+  "config": {
+    "blanket": {
+      "pattern": "lib"
+    }
   },
   "scripts": {
     "start": "node index.js",
+    "coveralls": "COVERAGE=1 ./node_modules/.bin/mocha --require blanket --reporter mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js",
     "test": "mocha"
   }
 }
