config loading, load parser & elasticsearch

--- a/test/log-ship-elasticsearch-postfix.ini
+++ b/test/log-ship-elasticsearch-postfix.ini
@@ -6,7 +6,7 @@ email=admin@example.com
 
 [elastic]
 module=elasticsearch
-hosts=localhost
+hosts=localhost:9200
 index=postfix-orphans
 batch=100
 
