apply ES mapping index
* replace moment with moment-timezone
* es: create index before storing mapping
* es: test that applies the index map
* es: delete mapping first, then add
* don't fail if index already exists

--- a/log-ship-elasticsearch-postfix.ini
+++ b/log-ship-elasticsearch-postfix.ini
@@ -14,6 +14,10 @@ batch=1024
 [parser]
 module=postfix-parser
 
+; syslog lines don't have time zone data. What is your time zone?
+; timezone map: http://momentjs.com/timezone/
+timezone=America/Phoenix
+
 
 [reader]
 module=safe-log-reader
