--- a/test/log-ship-elasticsearch-postfix.ini
+++ b/test/log-ship-elasticsearch-postfix.ini
@@ -13,6 +13,9 @@ batch=100
 
 [parser]
 module=postfix-parser
+; syslog lines don't have time zone data. What is your time zone?
+; timezone map: http://momentjs.com/timezone/
+timezone=America/Phoenix
 
 
 [reader]
