--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "async": "^1.3.0",
     "elasticsearch": "*",
     "ini": "^1.3.4",
-    "moment": "^2.10.6",
+    "moment-timezone": "*",
     "postfix-parser": "*",
     "safe-log-reader": "*"
   },
