--- a/log-ship-elastics-postfix.ini
+++ b/log-ship-elastics-postfix.ini
@@ -14,7 +14,7 @@ batch=1024
 [parser]
 module=postfix-parser
 
-; syslog lines don't have time zone data. What is your time zone?
+; syslog lines don't have time zone data. Do set this!
 ; timezone map: http://momentjs.com/timezone/
 timezone=America/Phoenix
 
@@ -22,4 +22,3 @@ timezone=America/Phoenix
 [reader]
 module=safe-log-reader
 file=/var/log/mail.log
-
