--- a/log-ship-elastic-postfix.ini
+++ b/log-ship-elastic-postfix.ini
@@ -1,13 +1,15 @@
 
 [main]
 spool=/var/spool/log_ship/postfix
-email=admin@example.com
+;email=admin@example.com
 
 
 [elastic]
 module=elasticsearch
 hosts=es1:9200, es2:9200, es3:9200
-index=postfix-orphans
+index=postfix-orphan-YYYY-MM-DD
+indices=postfix-orphan*
+type=postfix-orphan
 batch=1024
 
 
@@ -22,3 +24,6 @@ timezone=America/Phoenix
 [reader]
 module=safe-log-reader
 file=/var/log/mail.log
+
+; how many seconds after a log file has grown to resume reading
+watchDelay=10
