--- a/test/log-ship-elastic-postfix.ini
+++ b/test/log-ship-elastic-postfix.ini
@@ -8,7 +8,12 @@ email=admin@example.com
 module=elasticsearch
 hosts=localhost:9200
 index=postfix-orphans
-batch=100
+
+; how many log lines to parse and queue before starting the batch
+; batch: get matching queue IDs from ES, update/create docs, save to ES
+batch=1024
+; how many seconds to pause between batches (sharing ES indexing time)
+batchDelay=5
 
 
 [parser]
