added elastic.batchDelay to .ini
sets the wait delay between batches

--- a/log-ship-elastic-postfix.ini
+++ b/log-ship-elastic-postfix.ini
@@ -11,6 +11,9 @@ index=postfix-orphan-YYYY-MM-DD
 indices=postfix-orphan*
 type=postfix-orphan
 batch=1024
+; how many seconds to pause between batches. General rule of thumb:
+; concurrent postfix log shippers / elasticsearch indexers
+batchDelay=5
 
 
 [parser]
