--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,9 @@
     "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
     "consistent-return": 0,
     "curly": [1, "multi-line"],
+    dot-notation: 2,
     "eqeqeq": 2,
-    "indent": [2, 4, {"SwitchCase": 1}],
+    "indent": [2, 2, {"SwitchCase": 1}],
     "max-len": [2, 80, 4, {
         ignoreComments: true, 
         ignoreUrls: true, 
@@ -33,6 +34,7 @@
       "words": true,
       "nonwords": false
     }],
+    "no-trailing-spaces": [2, { "skipBlankLines": false }],
     "strict": [2, "global"],
     "wrap-iife": [2, "inside"]
   }
