--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-ship-elastic-postfix",
   "description": "Ship normalized Postfix logs to Elasticsearch",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "private": false,
   "keywords": [
     "log", "postfix", "elasticsearch", "log ship"
@@ -18,7 +18,7 @@
     "elasticsearch": "*",
     "ini": "^1.3.4",
     "moment-timezone": "*",
-    "postfix-parser": "*",
+    "postfix-parser": ">=1.0.2",
     "safe-log-reader": "*"
   },
   "devDependencies": {
@@ -27,7 +27,7 @@
     "grunt": "^0.4.5",
     "grunt-eslint": "^17.0.0",
     "grunt-mocha-test": "^0.12.7",
-    "grunt-version-check": "^0.2.1",
+    "grunt-version-check": ">0.2.1",
     "mocha": "^2.2.5",
     "mocha-lcov-reporter": "0.0.2",
     "travis-cov": "^0.2.5"
