--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,9 @@
     "quote-props": [2, "as-needed"],
     "quotes": [1, "single"],
     "radix": 2,
+    "semi": [2, "always"],
+    "no-extra-semi": 2,
+    "semi-spacing": 2,
     "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "space-in-parens": [2, "never"],
