--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-ship-elastic-postfix",
   "description": "Ship normalized Postfix logs to Elasticsearch",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "private": false,
   "keywords": [
     "log", "postfix", "elasticsearch", "log ship"
@@ -22,15 +22,15 @@
     "safe-log-reader": "*"
   },
   "devDependencies": {
-    "blanket": "^1.1.7",
-    "coveralls": "^2.11.2",
-    "grunt": "^0.4.5",
-    "grunt-eslint": "^17.0.0",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-version-check": ">0.2.1",
-    "mocha": "^2.2.5",
-    "mocha-lcov-reporter": "0.0.2",
-    "travis-cov": "^0.2.5"
+    "blanket": "*",
+    "coveralls": "*",
+    "grunt": "*",
+    "grunt-eslint": "*",
+    "grunt-mocha-test": "*",
+    "grunt-version-check": "*",
+    "mocha": "*",
+    "mocha-lcov-reporter": "*",
+    "travis-cov": "*"
   },
   "config": {
     "blanket": {
