moved batch options into reader section
* process queue on.drain (was on.end)
* updated SLR version
* increase log level of EOF message

--- a/log-ship-elastic-postfix.ini
+++ b/log-ship-elastic-postfix.ini
@@ -10,10 +10,6 @@ hosts=es1:9200, es2:9200, es3:9200
 index=postfix-orphan-YYYY-MM-DD
 indices=postfix-orphan*
 type=postfix-orphan
-batch=1024
-; how many seconds to pause between batches. General rule of thumb:
-; concurrent postfix log shippers / elasticsearch indexers
-batchDelay=5
 
 
 [parser]
@@ -30,3 +26,10 @@ file=/var/log/mail.log
 
 ; how many seconds after a log file has grown to resume reading
 watchDelay=10
+
+; how many log lines to emit before submitting ES bulk request
+batchLimit=1024
+
+; how many seconds to pause between batches. General rule of thumb:
+; concurrent postfix log shippers / elasticsearch indexers
+batchDelay=5
