--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-ship-elastic-postfix",
   "description": "Ship normalized Postfix logs to Elasticsearch",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "private": false,
   "keywords": [
     "log", "postfix", "elasticsearch", "log ship"
@@ -19,7 +19,7 @@
     "ini": "^1.3.4",
     "moment-timezone": "*",
     "postfix-parser": ">=1.0.2",
-    "safe-log-reader": "*"
+    "safe-log-reader": ">=0.9.9"
   },
   "devDependencies": {
     "blanket": "*",
