--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: node_js
 node_js:
     - "0.10"
-    - "0.12"
-    - iojs
+    - "4.2"
 
 os:
     - linux
-    - osx
+#   - osx
 
 matrix:
     allow_failures:
         - os: osx
-        - node_js: iojs
+#       - node_js: iojs
     fast_finish: true
 
 services:
@@ -23,7 +22,11 @@ before_script:
   - sleep 12
 
 after_success:
-    - npm run coverage
-    - npm run coveralls
+#   - NODE_ENV=test COVERAGE=1 ./node_modules/.bin/mocha --require blanket --reporter travis-cov
+#   - COVERAGE=1 ./node_modules/.bin/mocha --require blanket --reporter mocha-lcov-reporter ./node_modules/coveralls/bin/coveralls.js
+    - npm install istanbul codecov.io
+    - NODE_ENV=cov ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec
+    - cat ./coverage/coverage.json | ./node_modules/codecov.io/bin/codecov.io.js
+
 
 sudo: false
