--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-ship-elastic-postfix",
   "description": "Ship normalized Postfix logs to Elasticsearch",
-  "version": "0.9.3",
+  "version": "0.9.5",
   "private": false,
   "keywords": [
     "log", "postfix", "elasticsearch", "log ship"
@@ -18,19 +18,15 @@
     "elasticsearch": "*",
     "ini": "^1.3.4",
     "moment-timezone": "*",
-    "postfix-parser": ">=1.0.2",
+    "postfix-parser": ">=1.0.4",
     "safe-log-reader": ">=0.9.9"
   },
   "devDependencies": {
-    "blanket": "*",
-    "coveralls": "*",
     "grunt": "*",
     "grunt-eslint": "*",
     "grunt-mocha-test": "*",
     "grunt-version-check": "*",
-    "mocha": "*",
-    "mocha-lcov-reporter": "*",
-    "travis-cov": "*"
+    "mocha": "*"
   },
   "config": {
     "blanket": {
@@ -49,8 +45,6 @@
   },
   "license" : "BSD-2-Clause",
   "scripts": {
-    "coverage": "NODE_ENV=test COVERAGE=1 ./node_modules/.bin/mocha --require blanket --reporter travis-cov",
-    "coveralls": "COVERAGE=1 ./node_modules/.bin/mocha --require blanket --reporter mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js",
     "start": "node server.js",
     "test": "NODE_ENV=test mocha"
   }
