move getEsOpts into function
* refactor part of PostfixToElastic()
    * into a couple smaller functions
    * it was getting rather unwieldy
* fetch postfix docs from both indexes (both being parented and orphans)
* get postfix parents from Redis
    * add optional redis loading
    * look up parent IDs in redis
    * save docs with parents to parent index
speed: limit searches to time series indexes
    * greatly speeds up searches when ES has millions or billions of time-series documents
* moved config default setting into loadConfig(), (also a performance optimization: do it once at load, not a billion times later).
* remove extra config references (simplicity++)

--- a/log-ship-elastic-postfix.ini
+++ b/log-ship-elastic-postfix.ini
@@ -7,9 +7,14 @@ spool=/var/spool/log_ship/postfix
 [elastic]
 module=elasticsearch
 hosts=es1:9200, es2:9200, es3:9200
-index=postfix-orphan-YYYY-MM-DD
-indices=postfix-orphan*
+timeformat=YYYY-MM-DD
+
+index=postfix-orphan
 type=postfix-orphan
+
+[elastic.parent]
+index=postfix
+type=postfix
 
 
 [parser]
@@ -33,3 +38,11 @@ batchLimit=1024
 ; how many seconds to pause between batches. General rule of thumb:
 ; concurrent postfix log shippers / elasticsearch indexers
 batchDelay=5
+
+
+[redis]
+; uncomment the module line to enable
+; module=redis
+; host=127.0.0.1
+; port=6379
+; db=1
