--- a/test/log-ship-elastic-postfix.ini
+++ b/test/log-ship-elastic-postfix.ini
@@ -9,6 +9,9 @@ module=elasticsearch
 hosts=localhost:9200
 index=postfix-orphans
 
+; index for documents with parents
+parent=postfix
+
 ; how many log lines to parse and queue before starting the batch
 ; batch: get matching queue IDs from ES, update/create docs, save to ES
 batch=1024
