--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "log-ship-elastic-postfix",
   "description": "Ship normalized Postfix logs to Elasticsearch",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "private": false,
   "keywords": [
-    "log", "postfix", "elasticsearch", "log ship"
+    "log",
+    "postfix",
+    "elasticsearch",
+    "log ship"
   ],
   "homepage": "https://github.com/DoubleCheck/log-ship-elastic-postfix",
   "bugs": {
@@ -19,6 +22,7 @@
     "ini": "^1.3.4",
     "moment-timezone": "*",
     "postfix-parser": ">=1.0.4",
+    "redis": "^2.4.2",
     "safe-log-reader": ">=0.9.9"
   },
   "devDependencies": {
@@ -43,7 +47,7 @@
       "threshold": 80
     }
   },
-  "license" : "BSD-2-Clause",
+  "license": "BSD-2-Clause",
   "scripts": {
     "start": "node server.js",
     "test": "NODE_ENV=test mocha"
