update testing, lint, CI

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,8 +30,11 @@
     "semi": [2, "always"],
     "no-extra-semi": 2,
     "semi-spacing": 2,
-    "space-after-keywords": [2, "always"],
-    "space-before-blocks": [2, "always"],
+    "keyword-spacing": [2, {
+        "overrides": { },
+        "before": true,
+        "after": true
+        }],
     "space-in-parens": [2, "never"],
     "space-unary-ops": [2, {
       "words": true,
