--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-    - "0.10"
-    - "4.2"
+    - "4"
+    - "6"
 
 os:
     - linux
@@ -22,8 +22,8 @@ before_script:
     - sleep 12
 
 after_success:
-    - npm install istanbul codecov.io
-    - NODE_ENV=cov ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec
-    - cat ./coverage/coverage.json | ./node_modules/codecov.io/bin/codecov.io.js
+    - npm install istanbul codecov
+    - NODE_ENV=cov ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec
+    - cat ./coverage/coverage.json | ./node_modules/.bin/codecov
 
 sudo: false
