--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,13 @@ before_script:
     - chmod -w ./test/spool/nowrite
     - sleep 12
 
+script:
+    - npm run lint
+    - npm test
+
 after_success:
     - npm install istanbul codecov
     - NODE_ENV=cov ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -R spec
-    - cat ./coverage/coverage.json | ./node_modules/.bin/codecov
+    - ./node_modules/.bin/codecov
 
 sudo: false
