enable redis server on Travis-CI
- enable ES tests on testing-docker
- enable the reader test too
- updating CI ES to v2

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,15 @@ matrix:
 #       - node_js: iojs
     fast_finish: true
 
+addons:
+  apt:
+    sources:
+      - elasticsearch-2.x
+    packages:
+      elasticsearch
+
 services:
+    - redis-server
     - elasticsearch
 
 # wait for elasticsearch to start up
