--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
   "env": {
-    "node": true
+    "node": true,
+    "es6": true,
+    "mocha": true
   },
+  "extends": [ "eslint:recommended" ],
   "rules": {
     "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
     "consistent-return": 0,
@@ -9,7 +12,7 @@
     "dot-notation": 2,
     "eqeqeq": 2,
     "indent": [2, 2, {"SwitchCase": 1}],
-    "max-len": [2, 80, 4, {
+    "max-len": [2, 90, 4, {
         "ignoreComments": true,
         "ignoreUrls": true,
         "ignorePattern": "\\/"
@@ -18,17 +21,11 @@
     "no-multiple-empty-lines": 2,
     "no-throw-literal": 2,
     "no-underscore-dangle": 0,
-    "no-unused-vars": [2, {
-      "vars": "all",
-      "args": "none"
-    }],
     "no-use-before-define": [2, "nofunc"],
     "object-curly-spacing": [2, "always"],
     "quote-props": [2, "as-needed"],
     "quotes": [1, "single"],
     "radix": 2,
-    "semi": [2, "always"],
-    "no-extra-semi": 2,
     "semi-spacing": 2,
     "keyword-spacing": [2, {
       "overrides": { },
@@ -41,7 +38,8 @@
       "nonwords": false
     }],
     "no-trailing-spaces": [2, { "skipBlankLines": false }],
-    "strict": [2, "global"],
-    "wrap-iife": [2, "inside"]
+    "wrap-iife": [2, "inside"],
+    "no-console": 0,
+    "no-empty": ["error", { "allowEmptyCatch": true }]
   }
 }
