use default elasticsearch 5.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
 addons:
   apt:
     sources:
-      - elasticsearch-2.x
+      # - elasticsearch-2.x
     packages:
       elasticsearch
 
